# mp3player

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md
